pod/meteor/infra-ui/gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: infra-ui-${INFRA_UI_ENV}
spec:
  type: ExternalName
  externalName: meteor.infra-ui-${INFRA_UI_ENV}.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-ui-${INFRA_UI_ENV}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: acme-prod
    nginx.ingress.kubernetes.io/auth-tls-secret: ${INFRA_UI_CA}
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${INFRA_UI_HOST}.uws.talkingpts.org
      secretName: infra-ui-${INFRA_UI_ENV}-certificate
  rules:
    - host: ${INFRA_UI_HOST}.uws.talkingpts.org
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: infra-ui-${INFRA_UI_ENV}
                port:
                  number: 3000
